<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="60dp"
    android:paddingBottom="60dp"
    android:clipToPadding="false">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.lucas.lucasvanberkel_pset6.LogInActivity"
        tools:showIn="@layout/activity_login">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginEmail"
            android:id="@+id/loginEmail"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginEmailText"
            android:inputType="textEmailAddress"
            android:hint="@string/loginEmailHint"
            android:layout_below="@+id/loginEmail"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginPassword"
            android:id="@+id/loginPassword"
            android:layout_below="@+id/loginEmailText"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/loginPasswordText"
            android:hint="@string/loginPasswordHint"
            android:layout_below="@+id/loginPassword"
            android:layout_marginBottom="15dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:text="@string/loginButton"
            android:layout_below="@+id/loginPasswordText"
            android:layout_marginBottom="15dp"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchButton"
            android:text="@string/toggleButtonSignUp"
            android:layout_below="@+id/loginPasswordText"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signupButton"
            android:text="@string/signupButton"
            android:layout_below="@+id/loginPasswordText"
            android:layout_marginBottom="15dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:visibility="invisible"/>


    </RelativeLayout>
</ScrollView>